<feat><interface ok>

--- a/App/scss/_variables_overrides.scss
+++ b/App/scss/_variables_overrides.scss
@@ -7,6 +7,12 @@ $bootstrap-icons-font-src: url("../../node_modules/bootstrap-icons/font/fonts/bo
 $colorLogo:#D04F4F;
 $colorGrey:#E7E7E7;
 
+$colorIngredients: #3282F7;
+$colorAppliance: #68D9A4;
+$colorUstensils: #ED6454;
+
+
+
 /* FONTS */
 $fontSizeCardHeader: 18px;
 $fontSizeCardBody: 12px;
