--- a/App/scss/style.scss
+++ b/App/scss/style.scss
@@ -1,5 +1,8 @@
 @import "variables_overrides.scss";
+@import "mixins";
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
 @import "../../node_modules/bootstrap-icons/font/bootstrap-icons.scss";
 @import "page.scss";
 @import "card.scss";
-@import "../../node_modules/bootstrap/scss/bootstrap.scss";
+@import "tags.scss";
+@import "buttons.scss";
